部分録画時のバグ修正

--- a/README.ja
+++ b/README.ja
@@ -30,5 +30,10 @@ create_sample_config.rb と create_sample_control.rb を適当に弄ってから
 ※すいません、全然ここらへん他の人が使えるように作っておりません…。
 ※なんかいい感じの設定方法とか考えます…。
 
+ちなみにメモリリークとか対策で一定時間で終了するような感じの仕組み入れてたりするので、
+24時間くらいしか動かないです。
+将来的には、cron で毎分起動 (ただし別プロセスで起動中はそのまま終了する) って感じにしようかと思ってたり
+
+
 
 
